# haskell-book-reading-group-exercises

./: .gitpod.Dockerfile  CHANGELOG.md  Chapter01.md  Chapter02.md  Chapter03.md  Chapter04.md  Emraors.cabal  LICENSE  Makefile  README.md  README.org  default.nix  flake.nix  haskell-book-reading-group-exercises.cabal  haskell-book.cabal  hie.yaml  package.yaml  pkg.nix  stack.yaml  tonioGela.cabal
.devcontainer/: Dockerfile  devcontainer.json
app/: Main.hs
ch01/: README.md  ch01.md
ch02/: .Main.hs.swp  Main.hs
ch03/: Main.hs
chapter-1/: README.org
chapter-3/: ChapterThree.hs
chapter01/: chapter01.md
chapter02/: chapter02.cabal  package.yaml
chapter02/src/: Chapter02.hs
chapter02/test/: Spec.hs
chapter03/: chapter03.cabal  package.yaml
chapter03/src/: Chapter03.hs  Reverse.hs
chapter03/test/: Spec.hs
chapter04/: chapter04.cabal  package.yaml
chapter04/src/: Chapter04.hs
chapter04/test/: Spec.hs
chapter05/: chapter05.cabal  package.yaml
chapter05/src/: Chapter05.hs
chapter06/: Chapter06.hs  chapter06.cabal  package.yaml
chapter06/src/: Chapter06.hs
chapter12/: Chapter12.hs
chapter13/: Chapter13.hs
chapter14/: Chapter14.hs
chapter15/: Chapter15.hs
chapter16/: Chapter16.hs
chapter17/: Chapter17.hs
chapter18/: Chapter18.hs
chapter19/: Chapter19.hs  docker-compose.yml
chapter20/: Chapter20.hs
chapter21/: Chapter21.hs
chapter22/: Chapter22.hs
chapter23/: Chapter23.hs
chapter24/: Chapter24.hs  ParserPaolino.hs  Type.hs  Value.hs
chapter25/: Chapter25.hs
chapter26/: Chapter26.hs  Morra.hs  Tests.hs
nivlude/: nivlude.cabal  package.yaml
nivlude/src/: Nivlude.hs
nivlude/test/: Spec.hs
src/: Ch02.hs  Ch03.hs  Ch04.hs  Chapter02.hs  Core.hs  ItWorks.hs  Main.hs  MyPrelude.hs  eserciziPaolino.hs
src/Chapter03/: BuildingFunctions.hs  print1.hs  print2.hs  print3.hs  print3broken.hs  print3flipped.hs  reverse.hs  scope.hs
src/Chapter04/: MoodSwing.hs  exercises.hs  greetIfCool1.hs  greetIfCool2.hs  performance.hs
src/ch01/: chapter-exercises.md
src/ch02/: 206-ParenthesesAndAssociation.hs  207-HealTheSick.hs  210-AHeadCode.hs  chapter-exercises.hs
src/ch03/: 304-Scope.hs  305-SyntaxErrors.hs  chapter-exercises.hs
src/ch04/: 403-MoodSwing.hs  406-FindTheMistakes.hs  chapter-exercises.hs
src/ch05/: 503-TypeMatching.hs  504-Currying.hs  505-Polymorphism.hs  506-ApplyYourself.hs  chapter-exercises.hs
src/ch06/: 605-EqInstances.hs  608-WillTheyWork.hs  chapter-exercises.hs
src/ch07/: 703-GrabBag.hs  704-VarietyPack.hs  705-CasePractice.hs  706-ArtfulDodgy.hs  chapter-exercises.hs
src/ch08/: WordNumber.hs  chapter-exercises.hs
src/ch09/: 905-EnumFromTo.hs  906-ThyFearfulSymmetry.hs  907-SquareCube.hs  908-BottomMadness.hs  909-MoreBottoms.hs  910-Filtering.hs  911-ZippingExercises.hs  chapter-exercises.hs
src/ch10/: 1005-UnderstandingFolds.hs  1006-DatabaseProcessing.hs  chapter-exercises.hs
src/ch11/: 1105-DogTypes.hs  1106-Vehicle.hs  1108-Cardinality.hs  1108-ForExample.hs  1109-LogicGoats.hs  1110-PityTheBool.hs  1112-HowDoesYourGardenGrow.hs  1113-Programmers.hs  1114-ExponentiationInWhatOrder.hs  chapter-exercises.hs
src/ch12/: chapter-exercises.hs
src/ch13/: chapter-exercises.hs  ciphers.hs
src/ch14/: Addition.hs
src/ch15/: 1510-OptionalMonoid.hs  1511-Madness.hs  1512-MaybeAnotherMonoid.hs  chapter-exercises.hs
src/ch16/: 1604-BeKind.hs  1607-HeavyLifting.hs  1610-InstancesOfFunc.hs  1611-Possibly.hs  chapter-exercises.hs
test/: Spec.hs
(+22 files in other folders)
