cabal-version:      3.4
name:               haskell-book-reading-group-exercises
version:            0.1.0.0
license:            NONE
author:             David Saitta
maintainer:         david.saitta@gmail.com
build-type:         Simple

library 
  hs-source-dirs:      src
  exposed-modules:     Core, Ch02, Ch03, Ch04
  build-depends:       base
  default-language:    Haskell2010
  ghc-options: -fllvm 

test-suite haskell-book-reading-group-exercises-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base, haskell-book-reading-group-exercises, hspec
  build-tool-depends:  hspec-discover:hspec-discover
  default-language:    Haskell2010
  ghc-options: -fllvm 
  