name:                haskell-book-reading-group-exercises
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/edoardomistretta/haskell-book-reading-group-exercises#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          Edoardo Mistretta
copyright:           2022 Edoardo Mistretta
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable haskell-book-reading-group-exercises
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints
