cabal-version:      3.0
name:               haskell-book
version:            0.1.0.0
license:            GPL-3.0-or-later
maintainer:         andrea.ciceri@autistici.org
author:             Andrea Ciceri
category:           Exercises
extra-source-files: README.org

common shared
  ghc-options:
    -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wcompat -Widentities -Wredundant-constraints -fhide-source-paths
    -Wmissing-export-lists -Wpartial-fields

  build-depends:    base >=4.13.0.0 && <4.18.0.0.0
  default-language: Haskell2010

library chapter-3
  hs-source-dirs:  chapter-3
  exposed-modules: ChapterThree
  import:          shared
  build-depends:   base >=4.13.0.0 && <4.18.0.0.0